--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -49,11 +49,11 @@ jobs:
 
       - name: Build and analyze with SonarCloud
         env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_TOKEN: ${{ 136f6d66ea4686a053639a3b7c448c1a7a5876f9 }}
         run: |
           mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar \
             -Dsonar.projectKey=maria-szew_io-11-12 \
-            -Dsonar.organization=twoja_organizacja \
+            -Dsonar.organization=maria_szew \
             -Dsonar.host.url=https://sonarcloud.io
 
       - name: Update dependency graph
